--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <div class="goods">
         <div class="container">
             <div class="goods__wrapper">
-                <div class="goods__item">
+                <!-- <div class="goods__item">
                     <img class="goods__img" src="img/1.jpg" alt="phone">
                     <div class="goods__colors">Доступно цветов: 4</div>
                     <div class="goods__title">
@@ -141,8 +141,8 @@
                     </div>
                     <div class="goods__price">
                         <span>17990</span> руб/шт
-                    </div>
-                    <button class="goods__btn">Добавить в корзину</button>
+                    </div> -->
+                    <!-- <button class="goods__btn">Добавить в корзину</button> -->
                 </div>
             </div>
         </div>
